more progress on embossing post

--- a/_hobby/2019-06-03-emboss.md
+++ b/_hobby/2019-06-03-emboss.md
@@ -66,12 +66,9 @@ filt = cv2.bitwise_and(cv2.bitwise_not(mask), v)
  The resulting plot is much more promising. However, after applying the mask, the smallest regions got even smaller and now their area is so small that the noise in that region of the colorspace is still significant.
 <img src="/assets/img/hobby/emboss/plot_log_clean.png" alt="plot of log clean histogram data" width="500">
 
-The final step to clean these peaks was to use one more assumption about the input image: that the levels are reasonably spaced in the color space. This justifies taking the z-score of each peak relative to a window around that saturation value to determine how significant its count is. Another trick was limiting the number of buckets to 128 or 64 since the peaks should be spaced far enough apart to be placed in different buckets, and any noise close to those values would get absorbed into the bucket instead of being its own peak. Both of these tricks led to a much cleaner plot, for which it was clear how to choose to parameters for `find_peaks`. I decided that if the height of the peak was greater than 1, meaning it was at least a standard deviation above the mean of the window around it in the color space, then the value was reasonably outlying and could be considered a peak. This rule yields the following peaks which correspond perfectly to the levels in the test image:
+The final step to clean these peaks was to use one more assumption about the input image: that the levels are reasonably spaced in the color space. This justifies taking the z-score of each peak relative to a window around that saturation value to determine how significant its count is. Another trick was limiting the number of buckets to 128 or 64 since the peaks should be spaced far enough apart to be placed in different buckets, and any noise close to those values would get absorbed into the bucket instead of being its own peak. Both of these tricks led to a much cleaner plot, for which it was clear how to choose the parameters for `find_peaks`. I decided that if the height of the peak was greater than 1, meaning it was at least a standard deviation above the mean of the window around it in the color space, then the value was reasonably outlying and could be considered a peak. This rule yields the following peaks which correspond perfectly to the levels in the test image:
 
 <img src="/assets/img/hobby/emboss/plot_norm.png" alt="plot of normalized histogram data" width="500">
-
-<img src="/assets/img/hobby/emboss/noface_layers.png" alt="noface layers" width="500">
-<img src="/assets/img/hobby/emboss/noface_virtual.png" alt="embossed virtual noface" width="500">
 
 
 Finally, here is another example of the program output vs the final paper version for a [Princess Mononoke poster](https://edho-design.github.io):
