--- a/_hobby/2019-06-03-emboss.md
+++ b/_hobby/2019-06-03-emboss.md
@@ -14,9 +14,9 @@ The script accepts an image of his design and approximates what the final emboss
 
 Here's some sample output for a [Totoro poster](https://edho-design.github.io) before we get into the code. The left is the layers that go into the program, the middle is the output of the program, and the right is the final version after pressing the paper through the mold. 
 
-<img src="/assets/img/hobby/emboss/totoro_layers.png" alt="totoro layers" width="500">
-<img src="/assets/img/hobby/emboss/totoro_virtual.png" alt="embossed virtual totoro" width="500">
-<img src="/assets/img/hobby/emboss/totoro_final.jpg" alt="embossed paper totoro" width="500">
+<img src="/assets/img/hobby/emboss/totoro_layers.png" alt="totoro layers" width="30%">
+<img src="/assets/img/hobby/emboss/totoro_virtual.png" alt="embossed virtual totoro" width="30%">
+<img src="/assets/img/hobby/emboss/totoro_final.jpg" alt="embossed paper totoro" width="30%">
 
 I wanted to make the program as simple to use as possible, so the input could just be a simple screenshot of his work during the design phase. However, this means that some information about the layers in the design would be missing. Even more troublesome, information about the edges in the image is also destroyed when moving from the vector to raster world. Luckily, Ed was already using the saturation of the color in a given layer to denote its depth to him visually (see the leftmost Totoro above). So the program can use this hint in the opposite direction to distinguish the different parts of the design by the saturation channel of the HSV image.
 
@@ -64,6 +64,7 @@ filt = cv2.bitwise_and(cv2.bitwise_not(mask), v)
 ```
 
  The resulting plot is much more promising. However, after applying the mask, the smallest regions got even smaller and now their area is so small that the noise in that region of the colorspace is still significant.
+
 <img src="/assets/img/hobby/emboss/plot_log_clean.png" alt="plot of log clean histogram data" width="500">
 
 The final step to clean these peaks was to use one more assumption about the input image: that the levels are reasonably spaced in the color space. This justifies taking the z-score of each peak relative to a window around that saturation value to determine how significant its count is. Another trick was limiting the number of buckets to 128 or 64 since the peaks should be spaced far enough apart to be placed in different buckets, and any noise close to those values would get absorbed into the bucket instead of being its own peak. Both of these tricks led to a much cleaner plot, for which it was clear how to choose the parameters for `find_peaks`. I decided that if the height of the peak was greater than 1, meaning it was at least a standard deviation above the mean of the window around it in the color space, then the value was reasonably outlying and could be considered a peak. This rule yields the following peaks which correspond perfectly to the levels in the test image:
@@ -73,5 +74,5 @@ The final step to clean these peaks was to use one more assumption about the inp
 
 Finally, here is another example of the program output vs the final paper version for a [Princess Mononoke poster](https://edho-design.github.io):
 
-<img src="/assets/img/hobby/emboss/mononoke_virtual.png" alt="embossed virtual mononoke" width="500">
-<img src="/assets/img/hobby/emboss/mononoke_final.jpg" alt="embossed paper mononoke" width="500">
+<img src="/assets/img/hobby/emboss/mononoke_virtual.png" alt="embossed virtual mononoke" width="40%">
+<img src="/assets/img/hobby/emboss/mononoke_final.jpg" alt="embossed paper mononoke" width="40%">
